# bal.rs

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  config.yaml  targets.txt
L7/: Cargo.toml
L7/src/: main.rs
L7/src/lib/: mod.rs  round_robin.rs  weighted_load_balancer.rs
l7_load_balancer/: Cargo.toml
l7_load_balancer/src/: main.rs  round_robin.rs
load_balancer/src/: lb.rs
old/: index.html
server/: Cargo.toml  ports.csv  servers.csv
server/src/: get_ports.rs  get_uris.rs  main.rs  server.rs
src/: .config  cli.rs  lb.rs  lib.rs  main.rs
src/lb/: algos.rs
src/lb/algos/: ip_hash.rs  least_connections.rs  least_response_time.rs  round_robin.rs  static_lb.rs  weighted_least_connections.rs  weighted_least_response_time.rs  weighted_round_robin.rs
src/old/: index.html  main.rs
test-servers/: Dockerfile  README.md  app.py  compose.yaml
test-setup/: README.md  app.py  compose.yaml
