[package]
name = "Balrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1"
whoami = "1.5.0"
tokio = {version = "1", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}